<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="start_button">GO!</string>
    <string name="timer_test_text">30s</string>
    <string name="score_test_text">0/0</string>
    <string name="sum_test_text">31+7</string>
    <string name="answer_tag0">0</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="play_again">Play Again</string>
</resources>
